# rust_webapi

./: .coderabbit.yml  .cursorrules  .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  REFACTORING_RECOMMENDATIONS.md  REMAINING_IMPROVEMENTS.md  TESTING_IMPROVEMENTS.md  build.rs  docker-compose.yml  filtered_lcov.info  lcov.info  o11y.md  warnings_to_fix.txt
.cursor/rules/: api-development.mdc  application-layer.mdc  application.mdc  code-style.mdc  deletion-strategy.mdc  development-guidelines.mdc  domain-layer.mdc  domain.mdc  error-handling-metrics.mdc  infrastructure-layer.mdc  infrastructure.mdc  lint-and-test.mdc  master-index.mdc  overview.mdc  presentation-layer.mdc  presentation.mdc  project-structure.mdc  quick-reference.mdc  rust-architecture.mdc  rust-webapi.mdc  shelltest.mdc  testing-strategy.mdc  testing.mdc  tests.mdc  workflow.mdc
.github/: copilot-instructions.md  directorystructure.md  technologystack.md
.github/ISSUE_TEMPLATE/: requirement-definition.md
.github/prompts/: .prompt.md  agent.prompt.md  development.prompt.md
.github/workflows/: claude.yaml  tdd-workflow.yml
crates/domain/: Cargo.toml
crates/domain/src/model/: item.rs  user.rs
crates/domain/src/repository/: item_repository.rs  user_repository.rs
datadog/: README.md  agent-values.yaml  configmap-prometheus.yaml  dashboard.json  monitors.json
docs/: README.md  api-documentation.md  api-reference.md  architecture-detailed.md  architecture-guide.md  configuration-guide.md  database-schema.md  deployment-operations.md  development-guide.md  development-testing.md  grpc-api.md  keycloak-setup.md  operations-guide.md  performance-optimization.md  project-overview.md  requirement-management-guide.md  requirement-setup-examples.md  requirement-workflow.yml  tdd-config.yml
docs/diagrams/: deployment-diagram.md  er-diagram.md  sequence-diagrams.md
docs/openapi/: README.md  openapi.yaml  swagger-ui.html
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
initdb/: 01_create_tables.sql
k6/: .env.example  README.md  basic-performance-test.js  package.json  run-tests.sh  setup-test-environment.sh  sla-baseline-measurement.sh  sla-health-test.js
k6/config/: constants.js
k6/docs/: sla-baseline-measurement-guide.md
k6/tests/: categories.js  items.js  products.js  users.js
k6/tests/load/: load-test.js
k6/tests/sla/: sla-validation-test.js
k6/utils/: auth.js  helpers.js
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  gateway.yaml  hpa.yaml  httproute.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres-deployment.yaml  postgres-network-policy.yaml  postgres-pvc.yaml  postgres-service.yaml  secret.yaml  service.yaml
migrations/: 20240101_add_performance_indexes.sql
proto/: item.proto  user.proto
scripts/: README.md  coverage.sh  create-requirement-issue.sh  manage-requirements.sh  setup-keycloak.sh  test_grpc.sh
src/: lib.rs  main.rs
src/infrastructure/: error.rs  mod.rs  startup_error.rs
src/presentation/: mod.rs
tests/: README.md  app_domain_repository_tests.rs  app_domain_repository_tests_old.rs  contract_deletion_strategy_tests.rs  db_tests.rs  e2e_tests.rs  in_memory_repository_tests.rs  integration_test.rs  integration_tests.rs  item_repository_test.rs  product_api_integration_tests.rs  product_repository_tests.rs  product_service_tests.rs  product_tests.rs  repository_error_tests.rs  repository_tests.rs
tests/helpers/: mock_builder.rs  mod.rs  postgres.rs  test_environment.rs
work/: 要件定義-カテゴリ.md  要件定義-商品削除.md  要件定義-商品編集.md
(+68 files in other folders)
