[package]
name = "rust_webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
dotenv = "0.15.0"
async-trait = "0.1.74"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11", features = ["json"] }
actix-web-httpauth = "0.8.1"
futures = "0.3"
chrono = "0.4"
base64 = "0.13"
# JSONログ用の依存関係
slog = "2.7.0"
slog-json = "2.6.1"
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "time"] }
tracing-actix-web = "0.5"
tracing-log = "0.1"
prometheus = "0.13.3"
lazy_static = "1.4.0"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.3"
