[package]
name = "rust_webapi"
version = "0.1.0"
edition = "2021"

[features]
default = []
testing = []

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "rust_decimal"], default-features = false }
dotenvy = "0.15.7"
async-trait = "0.1"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11", features = ["json"] }
actix-web-httpauth = "0.8.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
# JSONログ用の依存関係
slog = "2.7.0"
slog-json = "2.6.1"
slog-async = "2.8.0"
slog-term = "2.9.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
crossbeam-channel = "0.5.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "time"] }
tracing-actix-web = "0.7"
tracing-log = "0.1"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
# Fix the version of tracing-opentelemetry to match our opentelemetry version
tracing-opentelemetry = "0.30.0"
domain = { path = "crates/domain" }
mockall = "0.11"
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
# gRPC dependencies
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-reflection = "0.12"
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4.3"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.1", features = ["postgres"] }

[build-dependencies]
tonic-build = "0.12"

[workspace]
members = [
    "crates/domain",
    # 他のcrateは今後追加
]
