[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
async-trait = "0.1.74"

[dev-dependencies]
mockall = "0.11.4"
tokio = { version = "1.32.0", features = ["full", "test-util", "macros"] }

[lib]
path = "src/lib.rs"
